--- a/pages/page10.html
+++ b/pages/page10.html
@@ -32,7 +32,7 @@
 
 			</style>
 			
-		<img src="../pics/10-1.png" class="parent" id="par8">
+		<img src="./pics/10-1.png" class="parent" id="par8">
 		
 		<div id="place23">
 				
