--- a/pages/page11.html
+++ b/pages/page11.html
@@ -34,9 +34,9 @@
 			
 			</style>
 			
-		<img src="../pics/11-1.png" class="parent" id="par9">
-		<img src="../pics/11-2.png" class="placeholder" id="place24">
-		<img src="../pics/11-3.png" class="placeholder" id="place25">
-		<img src="../pics/11-4.png" class="placeholder" id="place26">
+		<img src="./pics/11-1.png" class="parent" id="par9">
+		<img src="./pics/11-2.png" class="placeholder" id="place24">
+		<img src="./pics/11-3.png" class="placeholder" id="place25">
+		<img src="./pics/11-4.png" class="placeholder" id="place26">
 		
 		
