--- a/pages/page12.html
+++ b/pages/page12.html
@@ -112,7 +112,7 @@
             }
 			</style>
 			
-		<img src="../pics/12-1.png" class="parent" id="par8A">
+		<img src="./pics/12-1.png" class="parent" id="par8A">
 		
         
 <div class="root">
