--- a/pages/page13.html
+++ b/pages/page13.html
@@ -72,12 +72,12 @@
 			
 			</style>
 		<div id="backg">	
-		<img src="../pics/13-par.png" class="parent" id="par12121">
-		<img src="../pics/13-1.png" class="placeholder" id="place27">
-		<img src="../pics/13-2.png" class="placeholder" id="place28">
-		<img src="../pics/13-3.png" class="placeholder" id="place29">
-		<img src="../pics/13-4.png" class="placeholder" id="place30">
-		<img src="../pics/13-5.png" class="placeholder" id="place31">
+		<img src="./pics/13-par.png" class="parent" id="par12121">
+		<img src="./pics/13-1.png" class="placeholder" id="place27">
+		<img src="./pics/13-2.png" class="placeholder" id="place28">
+		<img src="./pics/13-3.png" class="placeholder" id="place29">
+		<img src="./pics/13-4.png" class="placeholder" id="place30">
+		<img src="./pics/13-5.png" class="placeholder" id="place31">
 		<div id="place32">
                 <p style="font-family: Consolas">Captain Philippe Delavault fährt seit 1978 zur See. Seine maritime Laufbahn begann er bei der Marine. Danach war er Offizier auf verschiedenen Frachtern. Nach 5 Jahren als Kapitän eines riesigen Öltankers wechselte er 2001 auf sein erstes Kreuzfahrtschiff. In 2009 übernahm er das Kommando auf der Regen Seven Seas Voyager.</p>
         </div>
