--- a/pages/page15.html
+++ b/pages/page15.html
@@ -46,7 +46,7 @@
 
         </style>
         
-    <img src="../pics/15-1.png" class="parent" id="par11">
+    <img src="./pics/15-1.png" class="parent" id="par11">
     
     <div id="place33">
         <p class="t30" style="font-family:'Abril Text EB'">Amalfi</p>
