--- a/pages/page16.html
+++ b/pages/page16.html
@@ -34,7 +34,7 @@
 
         </style>
         
-    <img src="../pics/16-1.png" class="parent" id="par12">
+    <img src="./pics/16-1.png" class="parent" id="par12">
     
     <div id="place34">
         Wir lagen vor Anker und wurden mit dem Boot nach Positano übergesetzt.
