--- a/pages/page17.html
+++ b/pages/page17.html
@@ -50,10 +50,10 @@
 
         </style>
         
-    <img src="../pics/17-1.png" class="parent" id="par13">
-    <img src="../pics/17-2.png" class="placeholder" id="place36">
-    <img src="../pics/17-3.png" class="placeholder" id="place37">
-    <img src="../pics/17-4.png" class="placeholder" id="place38">
+    <img src="./pics/17-1.png" class="parent" id="par13">
+    <img src="./pics/17-2.png" class="placeholder" id="place36">
+    <img src="./pics/17-3.png" class="placeholder" id="place37">
+    <img src="./pics/17-4.png" class="placeholder" id="place38">
     <div id="place39">Martina genießt Positano</div>
     <div id="place40">Amalfis Kathedrale Sant’Andrea</div>
     
