--- a/pages/page2.html
+++ b/pages/page2.html
@@ -15,5 +15,5 @@
 	}
 	</style>
 	
-<img src="../pics/2-1.png" class="parent" id="par">
-<img src="../pics/2-2.png" class="placeholder" id="place">
+<img src="./pics/2-1.png" class="parent" id="par">
+<img src="./pics/2-2.png" class="placeholder" id="place">
