--- a/pages/page22.html
+++ b/pages/page22.html
@@ -16,6 +16,6 @@
         }
         </style>
         
-    <img src="../pics/22-1.png" class="parent" id="par18">
-    <img src="../pics/22-2.png" class="placeholder" id="place54">
+    <img src="./pics/22-1.png" class="parent" id="par18">
+    <img src="./pics/22-2.png" class="placeholder" id="place54">
     <div id="place55">Obst &amp; Gemüse auf dem Mercat de la Boqueria</div>
