--- a/pages/page24.html
+++ b/pages/page24.html
@@ -5,5 +5,5 @@
         }
         </style>
         
-    <img src="../pics/24-1.png" class="parent" id="par19">
+    <img src="./pics/24-1.png" class="parent" id="par19">
     
