--- a/pages/page25.html
+++ b/pages/page25.html
@@ -51,9 +51,9 @@
 }
     </style>
     
-<img src="../pics/25-1.png" class="placeholder" id="place61">
-<img src="../pics/25-2.png" class="placeholder" id="place62">
-<img src="../pics/25-3.png" class="placeholder" id="place63">
+<img src="./pics/25-1.png" class="placeholder" id="place61">
+<img src="./pics/25-2.png" class="placeholder" id="place62">
+<img src="./pics/25-3.png" class="placeholder" id="place63">
 
 <div id="place64">
     <p class="t41" style="font-family:'Proxima Nova ExCn Lt'"><strong>Deluxe Veranda Suite</strong> - Luxus pur</p>
