--- a/pages/page26.html
+++ b/pages/page26.html
@@ -30,7 +30,7 @@
 
     </style>
     
-<img src="../pics/26-1.png" class="parent" id="par20">
+<img src="./pics/26-1.png" class="parent" id="par20">
 
 <div id="place66">
 <p class="t43" style="font-family:'Abril Text EB'"><strong>Monte Carlo</strong> - die fürstliche Luxus-Stadt</p>
