--- a/pages/page27.html
+++ b/pages/page27.html
@@ -36,8 +36,8 @@
         }
         </style>
         
-    <img src="../pics/27-1.png" class="parent" id="par21">
-    <img src="../pics/27-2.png" class="placeholder" id="place67">
-    <img src="../pics/27-3.png" class="placeholder" id="place68">
-    <img src="../pics/27-4.png" class="placeholder" id="place69">
+    <img src="./pics/27-1.png" class="parent" id="par21">
+    <img src="./pics/27-2.png" class="placeholder" id="place67">
+    <img src="./pics/27-3.png" class="placeholder" id="place68">
+    <img src="./pics/27-4.png" class="placeholder" id="place69">
     
