--- a/pages/page28.html
+++ b/pages/page28.html
@@ -9,5 +9,5 @@
         }
         </style>
         
-    <img src="../pics/28-1.png" class="parent" id="par22">
+    <img src="./pics/28-1.png" class="parent" id="par22">
     
