--- a/pages/page29.html
+++ b/pages/page29.html
@@ -63,11 +63,11 @@ span{
     color:white;
 }
 </style>
-    <img src="../pics/29-5.png" class="parent" id="place295">    
-    <img src="../pics/29-1.png" class="placeholder" id="place70">
-    <img src="../pics/29-2.png" class="placeholder" id="place71">
-    <img src="../pics/29-3.png" class="placeholder" id="par23">
-    <img src="../pics/29-4.png" class="placeholder" id="place73">
+    <img src="./pics/29-5.png" class="parent" id="place295">    
+    <img src="./pics/29-1.png" class="placeholder" id="place70">
+    <img src="./pics/29-2.png" class="placeholder" id="place71">
+    <img src="./pics/29-3.png" class="placeholder" id="par23">
+    <img src="./pics/29-4.png" class="placeholder" id="place73">
     
     <div id="place74">
         <p class="t45"><span>Monte Carlo</span> - Das Spielcasino</p>
