--- a/pages/page3.html
+++ b/pages/page3.html
@@ -50,9 +50,9 @@ color:#484849;
 
 			</style>
 			
-		<img src="../pics/3-1.png" class="parent" id="par1">
-		<img src="../pics/3-2.png" class="placeholder" id="place1">
-		<img src="../pics/3-3.png" class="placeholder" id="place2">
+		<img src="./pics/3-1.png" class="parent" id="par1">
+		<img src="./pics/3-2.png" class="placeholder" id="place1">
+		<img src="./pics/3-3.png" class="placeholder" id="place2">
 		<div id="t5">
 			<p class="t6" style="font-family:'Open Sans'"><strong>Premium-Kreuzfahrt</strong></p>
 			
