--- a/pages/page31.html
+++ b/pages/page31.html
@@ -52,8 +52,8 @@
 }
     </style>
     
-<img src="../pics/31-1.png" class="parent" id="par26">
-<img src="../pics/31-2.png" class="placeholder" id="place79">
+<img src="./pics/31-1.png" class="parent" id="par26">
+<img src="./pics/31-2.png" class="placeholder" id="place79">
 <div id="place80">
     <p class="t48" style="font-family:'Abril Text EB'"><strong>Seven Seas Voyager</strong> - die public Bereiche</p>
 <hr style="margin-right:50%;"/>
