--- a/pages/page4.html
+++ b/pages/page4.html
@@ -64,11 +64,11 @@
 	}
 			</style>
 			
-		<img src="../pics/4-1.png" class="parent" id="par2">
-		<img src="../pics/4-2.png" class="placeholder" id="place3">
-		<img src="../pics/4-3.png" class="placeholder" id="place4">
-		<img src="../pics/4-4.png" class="placeholder" id="place5">
-		<img src="../pics/4-5.png" class="placeholder" id="place6">
+		<img src="./pics/4-1.png" class="parent" id="par2">
+		<img src="./pics/4-2.png" class="placeholder" id="place3">
+		<img src="./pics/4-3.png" class="placeholder" id="place4">
+		<img src="./pics/4-4.png" class="placeholder" id="place5">
+		<img src="./pics/4-5.png" class="placeholder" id="place6">
 		<div id="place7">
 				<p class="t9" style="font-family:'Playfair Display'">Seven Seas Voyager®</p>
 				<p class="t10" style="font-family:'Open Sans'">Wo selbst höchste Ansprüche an Luxus übertroffen werden</p>
