--- a/pages/page5.html
+++ b/pages/page5.html
@@ -86,12 +86,12 @@
 
 			</style>
 			
-		<img src="../pics/5-1.png" class="parent" id="par3">
-		<img src="../pics/5-2.png" class="placeholder" id="place8">
-		<img src="../pics/5-3.png" class="placeholder" id="place9">
-		<img src="../pics/5-4.png" class="placeholder" id="place10">
-		<img src="../pics/5-5.png" class="placeholder" id="place11">
-		<img src="../pics/5-6.png" class="placeholder" id="place12">
+		<img src="./pics/5-1.png" class="parent" id="par3">
+		<img src="./pics/5-2.png" class="placeholder" id="place8">
+		<img src="./pics/5-3.png" class="placeholder" id="place9">
+		<img src="./pics/5-4.png" class="placeholder" id="place10">
+		<img src="./pics/5-5.png" class="placeholder" id="place11">
+		<img src="./pics/5-6.png" class="placeholder" id="place12">
 		
 		<div id="place13">
 				<p class="t11">Tag 1 (4. August 2020)</p>
