--- a/pages/page6.html
+++ b/pages/page6.html
@@ -20,7 +20,7 @@
 
 			</style>
 			
-		<img src="../pics/6-1.png" class="parent" id="par4">
+		<img src="./pics/6-1.png" class="parent" id="par4">
 		
 		<div id="place14">
 				Colosseum
