--- a/pages/page7.html
+++ b/pages/page7.html
@@ -34,7 +34,7 @@ margin-bottom: -3%;
 			}
 			</style>
 			
-		<img src="../pics/7-1.png" class="parent" id="par5">
+		<img src="./pics/7-1.png" class="parent" id="par5">
 		
 		<div id="place15">
                 <p class="t15" style="font-family:'Playfair Display'">Rom - die ewige Stadt</p>
