--- a/pages/page8.html
+++ b/pages/page8.html
@@ -42,7 +42,7 @@ margin-bottom: -4%;
 
 			</style>
 			
-		<img src="../pics/8-1.png" class="parent" id="par6">
+		<img src="./pics/8-1.png" class="parent" id="par6">
 		
 		<div id="place16">
                 <p class="t17" style="font-family:'Abril Text EB'"><strong>Rom</strong> - die heillige Stadt</p>
