--- a/pages/page21.html
+++ b/pages/page21.html
@@ -58,10 +58,10 @@
         }
         </style>
         
-    <img src="../pics/21-1.png" class="parent" id="par17">
-    <img src="../pics/21-2.png" class="placeholder" id="place48">
-    <img src="../pics/21-3.png" class="placeholder" id="place49">
-    <img src="../pics/21-4.png" class="placeholder" id="place50">
+    <img src="./pics/21-1.png" class="parent" id="par17">
+    <img src="./pics/21-2.png" class="placeholder" id="place48">
+    <img src="./pics/21-3.png" class="placeholder" id="place49">
+    <img src="./pics/21-4.png" class="placeholder" id="place50">
     <div id="place51">Sagrada Familia</div>
 
     <div id="place52">Martina auf La Rambla</div>
