--- a/pages/page30.html
+++ b/pages/page30.html
@@ -43,9 +43,9 @@
     }
     </style>
     
-<img src="../pics/30-1.png" class="parent" id="par25">
-<img src="../pics/30-2.png" class="placeholder" id="place75">
-<img src="../pics/30-3.png" class="placeholder" id="place76">
+<img src="./pics/30-1.png" class="parent" id="par25">
+<img src="./pics/30-2.png" class="placeholder" id="place75">
+<img src="./pics/30-3.png" class="placeholder" id="place76">
 <div id="place77">
     Das Atrium
 
