--- a/pages/page9.html
+++ b/pages/page9.html
@@ -57,10 +57,10 @@
 
 			</style>
 			
-		<img src="../pics/9-1.png" class="parent" id="par7">
-		<img src="../pics/9-2.png" class="placeholder" id="place17">
-		<img src="../pics/9-3.png" class="placeholder" id="place18">
-		<img src="../pics/9-4.png" class="placeholder" id="place19">
+		<img src="./pics/9-1.png" class="parent" id="par7">
+		<img src="./pics/9-2.png" class="placeholder" id="place17">
+		<img src="./pics/9-3.png" class="placeholder" id="place18">
+		<img src="./pics/9-4.png" class="placeholder" id="place19">
 		
 		<div id="place20">
 				Martina am Tritonenbrunnen
