--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ResponsiveSlides.js &middot; Responsive jQuery slideshow</title>
+  <title>Cruise Book</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="../responsiveslides.css">
+  <link rel="stylesheet" href="responsiveslides.css">
   <link rel="stylesheet" href="demo.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-  <script src="../responsiveslides.min.js"></script>
+  <script src="responsiveslides.min.js"></script>
   <script>
     // You can also use "$(window).load(function() {"
     $(function () {
