--- a/index.html
+++ b/index.html
@@ -12,24 +12,6 @@
   <script>
     // You can also use "$(window).load(function() {"
     $(function () {
-      // Slideshow 1
-      $("#slider1").responsiveSlides({
-        maxwidth: 800,
-        speed: 800
-      });
-      // Slideshow 2
-      $("#slider2").responsiveSlides({
-        auto: false,
-        pager: true,
-        speed: 300,
-        maxwidth: 540
-      });
-      // Slideshow 3
-      $("#slider3").responsiveSlides({
-        manualControls: '#slider3-pager',
-        maxwidth: 540
-      });
-      // Slideshow 4
       $("#slider4").responsiveSlides({
         auto: false,
         pager: false,
@@ -43,6 +25,21 @@
           $('.events').append("<li>after event fired.</li>");
         }
       });
+
+
+$(document).keydown(function(e) {
+    if (e.keyCode === 37) {
+       // Previous
+       $(".prev").click();
+       return false;
+    }
+    if (e.keyCode === 39) {
+       // Next
+       $(".next").click();
+       return false;
+    }
+});
+
     });
   </script>
 </head>
